--- a/Block_Footer.html
+++ b/Block_Footer.html
@@ -6,12 +6,14 @@
   <title>Block_Footer.html</title>
   <link rel="icon" href="favicona-enitech.png">
   <!-- Open Sans Light -->
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> -->
+  <link rel="stylesheet" href="fonts-poppins.css" />
+  <link rel="stylesheet" href="fonts-open-sans.css">
 
   <style>
     body {
       margin: 0;
-      font-family: 'Open Sans', Arial, Tahoma, sans-serif;
+      font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
     }
   </style>
 
@@ -56,7 +58,7 @@
             <li><a href="indexManage.html#top" lang-code="00104">.Manažérske služby</a></li>
             <li><a href="indexRef.html#top" lang-code="00105">.Referencie</a></li>
             <li><a href="indexKariera.html#top" lang-code="00106">.Kariéra</a></li>
-            <li><a href="#" lang-code="00107">.Kontakt</a></li>
+            <li><a href="indexKontakt.html#top" lang-code="00107">.Kontakt</a></li>
           </ul>
         </div>
 
