--- a/Block_Menu.html
+++ b/Block_Menu.html
@@ -42,7 +42,7 @@
         <a href="indexManage.html#top" lang-code="00104">.Manažérske služby</a>
         <a href="indexRef.html#top" lang-code="00105">.Referencie</a>
         <a href="indexKariera.html#top" lang-code="00106">.Kariéra</a>
-        <a href="#" lang-code="00107">.Kontakt</a>
+        <a href="indexKontakt.html#top" lang-code="00107">.Kontakt</a>
       </nav>
       <div class="uvod-hamburger" onclick="toggleMenu()">
         <div></div>
@@ -62,7 +62,7 @@
       <a href="indexManage.html#top" lang-code="00104" onclick="closeMenu()">.Manažérske služby</a>
       <a href="indexRef.html#top" lang-code="00105" onclick="closeMenu()">.Referencie</a>
       <a href="indexKariera.html#top" lang-code="00106" onclick="closeMenu()">.Kariéra</a>
-      <a href="#" lang-code="00107" onclick="closeMenu()">.Kontakt</a>
+      <a href="indexKontakt.html#top" lang-code="00107" onclick="closeMenu()">.Kontakt</a>
     </div>
 
     <!-- Úvodný podklad -->
