--- a/indexKontakt.html
+++ b/indexKontakt.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="favicona-enitech.png">
   <link rel="stylesheet" href="fonts-poppins.css" />
   <link rel="stylesheet" href="fonts-open-sans.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="root.css">
   <style>
     body { visibility: hidden; margin: 0; font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif; } /*visibility sa vrati az po nacitani*/
@@ -15,6 +16,7 @@
   <link rel="stylesheet" href="animator.css">
   <link rel="stylesheet" href="menu.css">
   <link rel="stylesheet" href="kontakt1.css">
+  <link rel="stylesheet" href="kontakt2.css">
   <link rel="stylesheet" href="kontakt3.css">
   <link rel="stylesheet" href="footer.css">
 
@@ -41,17 +43,20 @@
   <div id="Footer-div-dst">
   </div>
 
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="ImportBlock.js" type="text/javascript"></script>  <!-- funkcie js: importovanie blokov -->
   <script src="scrolly_save.js" type="text/javascript" defer></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
   <script src="kontakt1.js" type="text/javascript"></script>
+  <script src="kontakt2_leaflet.js" type="text/javascript" defer></script>
 
   <script> 
     async function loadDivBlocks() {
       const p1 = ImportDiv("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
       const p2 = ImportDiv("Block_Kontakt1.html", "Kontakt1-div-src", "Kontakt1-div-dst");
-      const p3 = ImportDiv("Block_Kontakt3.html", "Kontakt3-div-src", "Kontakt3-div-dst");
-      const p4 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-      await Promise.all([p1, p2, p3, p4]); // vsetky ImportDiv mozu bezat paralelne
+      const p3 = ImportDiv("Block_Kontakt2.html", "kontakt2-div-src", "Kontakt2-div-dst");
+      const p4 = ImportDiv("Block_Kontakt3.html", "Kontakt3-div-src", "Kontakt3-div-dst");
+      const p5 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
+      await Promise.all([p1, p2, p3, p4, p5]); // vsetky ImportDiv mozu bezat paralelne
     }
    </script>
 
@@ -67,11 +72,15 @@
       await LoadTranslations('translations09-foot.txt');
       await UpdateTexts();
       await new Promise(requestAnimationFrame);
-
       await kontakt1_addEventListeners();
+      await new Promise(requestAnimationFrame);
+      await kontakt2_leaflet_init_map_pobocky();
+      await new Promise(requestAnimationFrame);
+      Animator.register("#id-kontakt1-animate-content", "animate-slide-in-bounce");
+      Animator.register("#id-kontakt2-animate-content", "animate-rotateFlipIn");
       Animator.register("#id-footer-hero-content", "animate-rotateFlipIn"); 
       restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
-      document.body.style.visibility = "visible"; // zobraz stránku až teraz    
+      document.body.style.visibility = "visible";  
     });
   </script>
 </body>
