--- a/Block_Klienti.html
+++ b/Block_Klienti.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vybraní klienti</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Source+Sans+Pro:wght@400;500;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="fonts-poppins.css" />
+  <link rel="stylesheet" href="fonts-open-sans.css">
   <style>
     body {
       margin: 0;
+      font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
     }
   </style>
   <link rel="stylesheet" href="klienti.css">  
@@ -16,8 +18,10 @@
   <div id="Klienti-div-src">
     <div class="klienti-wrapper">
         <div class="klienti-body">
-          <p>SPOLUPRÁCA</p>
-          <h2>Vybraní zákazníci</h2>
+          <div id="id-klienti-animate" style="transform-style: preserve-3d; transform: rotateX(-90deg) rotateY(10deg);">
+            <p lang-code="00301">SPOLUPRÁCA</p>
+            <h2 lang-code="00302">Vybraní zákazníci</h2>
+          </div>
             
             <div class="klienti-grid">    
                 <!-- 1. trojica -->
