--- a/Block_Uvod1.html
+++ b/Block_Uvod1.html
@@ -5,14 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Block_Uvod1.html</title>
   <link rel="icon" href="favicona-enitech.png">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="fonts-poppins.css" />
+  <link rel="stylesheet" href="fonts-open-sans.css">
   <style>
     body {
       margin: 0;
       padding: 1rem;
       background-color: white;
       color: black;
-      font-family: 'Montserrat', sans-serif;
+      font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;    
     }
   </style>
   <link rel="stylesheet" href="uvod1.css">
@@ -21,9 +22,9 @@
   <div id="Uvod1-div-src">
     <div class="uvod1-grid-container">
       <div class="uvod1-left-column">
-        <h2>Hľadáte skúseného a spoľahlivého partnera?</h2>
-        <p>Zistite, ako môžu naše IT a inžinierske služby podporovať inovácie a efektivitu vo vašej organizácii. Neváhajte osloviť náš predajný tím a zavolajte na preskúmanie možností</p>
-        <button class="uvod1-contact-button" onclick="location.href='indexKontakt.html'">Kontaktujte nás</button>
+        <h2 lang-code="00121">Hľadáte skúseného a spoľahlivého partnera?</h2>
+        <p lang-code="00122">Zistite, ako môžu naše IT a inžinierske služby podporovať inovácie a efektivitu vo vašej organizácii. Neváhajte osloviť náš predajný tím a zavolajte na preskúmanie možností</p>
+        <button class="uvod1-contact-button" onclick="location.href='indexKontakt.html'" lang-code="00123">Kontaktujte nás</button>
       </div>
       <div class="uvod1-right-column">
         <video class="uvod1-hero-video" autoplay muted loop playsinline>
