--- a/Block_IT.html
+++ b/Block_IT.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--klucove pre mobilne zariadenia-->
   <title>Block_IT.html</title>
   <link rel="icon" href="favicona-enitech.png">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="fonts-poppins.css" />
+  <link rel="stylesheet" href="fonts-open-sans.css">
   <style>
     body { visibility: hidden; margin: 0; font-family: "Montserrat", Arial, serif; } /*visibility sa vrati az po nacitani*/
     body, html {
       margin: 0;
       padding: 0;
-      font-family: 'Montserrat', sans-serif;
+      font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
     }
   </style>
   <link rel="stylesheet" href="root.css">
