--- a/indexManage.html
+++ b/indexManage.html
@@ -11,12 +11,12 @@
   <link rel="stylesheet" href="fonts-open-sans.css">
   <link rel="stylesheet" href="root.css">
   <style>
-    body { visibility: hidden; margin: 0; font-family: "Montserrat", Arial, serif; } /*visibility sa vrati az po nacitani*/
     body, html {
       margin: 0;
       padding: 0;
-      font-family: 'Montserrat', sans-serif;
+      font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
     }
+    body { visibility: hidden; }
   </style>
   <link rel="stylesheet" href="animator.css">
   <link rel="stylesheet" href="menu.css">
