--- a/Block_Onas1.html
+++ b/Block_Onas1.html
@@ -18,6 +18,7 @@
       visibility: hidden; 
       margin: 0;
       padding: 0;
+      font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
     }
   </style>
 </head>
