--- a/indexEngin.html
+++ b/indexEngin.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="animator.css">
   <link rel="stylesheet" href="menu.css">
   <link rel="stylesheet" href="UvodHero.css">
+  <link rel="stylesheet" href="enginint1.css">
+  <link rel="stylesheet" href="enginint2.css">
   <link rel="stylesheet" href="footer.css">
 
   <!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalostou DOMConentLoaded-->
@@ -33,6 +35,12 @@
   <div id="Engin-div-dst">
   </div>
 
+  <div id="EnginInt1-div-dst">
+  </div>
+
+  <div id="EnginInt2-div-dst">
+  </div>
+
   <div id="Footer-div-dst">
   </div>
 
@@ -43,8 +51,10 @@
     async function loadDivBlocks() {
       const p1 = ImportDiv("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
       const p2 = ImportDiv("Block_Engin.html", "Engin-div-src", "Engin-div-dst");
-      const p3 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-      await Promise.all([p1, p2, p3]); // vsetky ImportDiv mozu bezat paralelne
+      const p3 = ImportDiv("Block_EnginInt1.html", "EnginInt1-div-src", "EnginInt1-div-dst");
+      const p4 = ImportDiv("Block_EnginInt2.html", "EnginInt2-div-src", "EnginInt2-div-dst");
+      const p5 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
+      await Promise.all([p1, p2, p3, p4, p5]); // vsetky ImportDiv mozu bezat paralelne
     }
    </script>
 
@@ -65,6 +75,8 @@
       await new Promise(requestAnimationFrame);
       Animator.register("#engin_animate-id", "animate-slide-in-bounce");
       Animator.register("#id-footer-hero-content", "animate-rotateFlipIn"); 
+      Animator.registerAll(".enginint1-header-line", "animate-width-grow");
+      Animator.registerAll(".enginint2-header-line", "animate-width-grow");
       restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
       document.body.style.visibility = "visible"; // zobraz stránku až teraz    
     });    
