--- a/Block_EnginInt2.html
+++ b/Block_EnginInt2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>test-position2.html</title>
+  <title>Block_EnginInt2.html</title>
   <link rel="icon" href="favicona-enitech.png" />
 
   <link rel="stylesheet" href="fonts-poppins.css" />
@@ -38,17 +38,17 @@
               <h3 lang-code="01201">Interná konštrukcia</h3>
               <p>
                 <strong lang-code="01202">Projekty montážnych plošín</strong> 
-                <span lang-code="01202">pre vonkajšie časti lietadiel</span>
+                <span lang-code="01203">pre vonkajšie časti lietadiel</span>
               </p>
               <ul class="custom-list">
-                    <li lang-code="01203">tvorba 3D dielov podľa požiadaviek zákazníka </li>
-                    <li lang-code="01204">tvorba zostáv z vymodelovaných dielov, metódou skeletonu</li>
-                    <li lang-code="01205">vyplňovanie atribútov dielov a zostáv </li>
-                    <li lang-code="01206">tvorba kusovníkov</li>
-                    <li lang-code="01207">modifikácia existujúcich dielov a zostáv</li>
+                    <li lang-code="01204">tvorba 3D dielov podľa požiadaviek zákazníka </li>
+                    <li lang-code="01205">tvorba zostáv z vymodelovaných dielov, metódou skeletonu</li>
+                    <li lang-code="01206">vyplňovanie atribútov dielov a zostáv </li>
+                    <li lang-code="01207">tvorba kusovníkov</li>
+                    <li lang-code="01208">modifikácia existujúcich dielov a zostáv</li>
               </ul>
             <div class="enginint2-more-info-container">
-              <a href="indexKontakt.html#id-kontakt3-Deak" class="animate-text-underline">Viac informácií</a>
+              <a href="indexKontakt.html#id-kontakt3-Deak" class="animate-text-underline" lang-code="01209">Viac informácií</a>
             </div>
         </div>
 
