--- a/Block_Footer.html
+++ b/Block_Footer.html
@@ -26,7 +26,7 @@
   <script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
 </head>
 <body>
-  <div id="Footer-div-src" class="footer-body">
+  <div id="Footer-div-src">
   <!-- Úvodný blok -->
     <div class="footer-hero-header">
         <div class="footer-hero-content" id="id-footer-hero-content">
