--- a/Block_EnginInt2.html
+++ b/Block_EnginInt2.html
@@ -48,7 +48,7 @@
                     <li lang-code="01208">modifikácia existujúcich dielov a zostáv</li>
               </ul>
             <div class="enginint2-more-info-container">
-              <a href="indexKontakt.html#id-kontakt3-Deak" class="animate-text-underline" lang-code="01209">Viac informácií</a>
+              <a href="indexKontakt.html#id-kontakt-Deak" class="animate-text-underline" lang-code="01209">Viac informácií</a>
             </div>
         </div>
 
