--- a/Block_EnginInt3.html
+++ b/Block_EnginInt3.html
@@ -54,7 +54,7 @@
                     <li lang-code="01306">testovacích prípravkov</li>
               </ul>
             <div class="enginint3-more-info-container">
-              <a href="indexKontakt.html#id-kontakt3-Deak" class="animate-text-underline" lang-code="01307">Viac informácií</a>
+              <a href="indexKontakt.html#id-kontakt-Deak" class="animate-text-underline" lang-code="01307">Viac informácií</a>
             </div>
         </div>
       </div>
