--- a/Block_EnginInt4.html
+++ b/Block_EnginInt4.html
@@ -56,7 +56,7 @@
                     <li lang-code="01407">vývoj a parametrizácia dát v softvéri 3D EXPERIENCE</li>
               </ul>
             <div class="enginint4-more-info-container">
-              <a href="indexKontakt.html#id-kontakt3-Deak" class="animate-text-underline" lang-code="01408">Viac informácií</a>
+              <a href="indexKontakt.html#id-kontakt-Deak" class="animate-text-underline" lang-code="01408">Viac informácií</a>
             </div>
         </div>
       </div>
