--- a/Block_Kontakt3.html
+++ b/Block_Kontakt3.html
@@ -32,7 +32,7 @@
             <p>info@enitech.sk</p>
           </div>
         </div>
-        <div class="kontakt3-cell align-top" id="id-kontakt3-Deak">
+        <div class="kontakt3-cell align-top" id="id-kontakt-Deak">
           <div class="align-top">
             <p lang-code="05053">.Interná konštrukcia:</p>
             <p>&nbsp;</p>
@@ -43,7 +43,7 @@
             <p>deak@enitech.sk</p>
           </div>
         </div>
-        <div class="kontakt3-cell align-top">
+        <div class="kontakt3-cell align-top" id="id-kontakt-Kracala">
           <div class="align-top">
             <p lang-code="05054">.Externá konštrukcia a IT služby:</p>
           </div>
@@ -53,7 +53,7 @@
             <p>kracala@enitech.sk</p>
           </div>
         </div>
-        <div class="kontakt3-cell align-top">
+        <div class="kontakt3-cell align-top" id="id-kontakt-Ivaska">
           <div class="align-top">
             <p lang-code="05054">.Externá konštrukcia a IT služby:</p>
           </div>
