--- a/indexEngin.html
+++ b/indexEngin.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="enginint2.css">
   <link rel="stylesheet" href="enginint3.css">
   <link rel="stylesheet" href="enginint4.css">
+  <link rel="stylesheet" href="enginext1.css">
   <link rel="stylesheet" href="footer.css">
 
   <!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalostou DOMConentLoaded-->
@@ -49,6 +50,9 @@
   <div id="EnginInt4-div-dst">
   </div>
 
+  <div id="EnginExt1-div-dst">
+  </div>
+
   <div id="Footer-div-dst">
   </div>
 
@@ -63,8 +67,9 @@
       const p4 = ImportDiv("Block_EnginInt2.html", "EnginInt2-div-src", "EnginInt2-div-dst");
       const p5 = ImportDiv("Block_EnginInt3.html", "EnginInt3-div-src", "EnginInt3-div-dst");
       const p6 = ImportDiv("Block_EnginInt4.html", "EnginInt4-div-src", "EnginInt4-div-dst");
-      const p7 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-      await Promise.all([p1, p2, p3, p4, p5, p6, p7]); // vsetky ImportDiv mozu bezat paralelne
+      const p7 = ImportDiv("Block_EnginExt1.html", "EnginExt1-div-src", "EnginExt1-div-dst");
+      const p8 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
+      await Promise.all([p1, p2, p3, p4, p5, p6, p7, p8]); // vsetky ImportDiv mozu bezat paralelne
     }
    </script>
 
