--- a/indexEngin.html
+++ b/indexEngin.html
@@ -94,6 +94,7 @@
       Animator.registerAll(".enginint2-header-line", "animate-width-grow");
       Animator.registerAll(".enginint3-header-line", "animate-width-grow");
       Animator.registerAll(".enginint4-header-line", "animate-width-grow");
+      Animator.registerAll(".enginext1-header-line", "animate-width-grow");
       restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
       document.body.style.visibility = "visible"; // zobraz stránku až teraz    
     });    
