--- a/indexEngin.html
+++ b/indexEngin.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="enginint4.css">
   <link rel="stylesheet" href="enginext1.css">
   <link rel="stylesheet" href="enginelekt1.css">
+  <link rel="stylesheet" href="enginautom1.css">
   <link rel="stylesheet" href="footer.css">
 
   <!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalostou DOMConentLoaded-->
@@ -57,6 +58,9 @@
   <div id="EnginElekt1-div-dst">
   </div>
 
+  <div id="EnginAutom1-div-dst">
+  </div>
+
   <div id="Footer-div-dst">
   </div>
 
@@ -73,8 +77,9 @@
       const p6 = ImportDiv("Block_EnginInt4.html", "EnginInt4-div-src", "EnginInt4-div-dst");
       const p7 = ImportDiv("Block_EnginExt1.html", "EnginExt1-div-src", "EnginExt1-div-dst");
       const p8 = ImportDiv("Block_EnginElekt1.html", "EnginElekt1-div-src", "EnginElekt1-div-dst");
-      const p9 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-      await Promise.all([p1, p2, p3, p4, p5, p6, p7, p8, p9]); // vsetky ImportDiv mozu bezat paralelne
+      const p9 = ImportDiv("Block_EnginAutom1.html", "EnginAutom1-div-src", "EnginAutom1-div-dst");
+      const p10 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
+      await Promise.all([p1, p2, p3, p4, p5, p6, p7, p8, p9, p10]); // vsetky ImportDiv mozu bezat paralelne
     }
    </script>
 
@@ -101,6 +106,7 @@
       Animator.registerAll(".enginint4-header-line", "animate-width-grow");
       Animator.registerAll(".enginext1-header-line", "animate-width-grow");
       Animator.registerAll(".enginelekt1-header-line", "animate-width-grow");
+      Animator.registerAll(".enginautom1-header-line", "animate-width-grow");
       restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
       document.body.style.visibility = "visible"; // zobraz stránku až teraz    
     });    
