--- a/Block_OpenProjects.html
+++ b/Block_OpenProjects.html
@@ -43,7 +43,7 @@
       </div>
       -->
       <div class="kariera-footer" id="id_PonukyFooter">
-        <a lang-code="08014" href="indexKontakt.html#top">.Nenašli ste vhodnú pozíciu pre Vás...</a>
+        <a lang-code="08014" href="indexKontakt.html#id-kontakt-Holla">.Nenašli ste vhodnú pozíciu pre Vás...</a>
       </div>
     </div>
   </div>
