--- a/Block_Manage.html
+++ b/Block_Manage.html
@@ -32,7 +32,11 @@
             <li lang-code="06018">.špecialistov na <strong>dátový manažment</strong></li>
           </ul>
           <div class="manage-link">
-            <a href="indexKontakt.html#id-kontakt-Info"  lang-code="06019">.Viac informácií</a>
+            <a href="indexKontakt.html#id-kontakt-Info" lang-code="06019" class="animate-text-underline" style="
+                    --text-color: #a8cfff;
+                    --hover-color: #ffffff;
+                    --underline-color: #ffffff;">
+              .Viac informácií</a>
           </div>
         </div>
         <div class="manage-image">
