--- a/Block_IT3.html
+++ b/Block_IT3.html
@@ -17,11 +17,11 @@
 </head>
 <body>
   <div id="IT3-div-src">
-    <div class="it3-grid-body" id="IT3-nearshoring" style="scroll-margin-top: 80px;"> <!-- aby menu nezakryvalo vrch stranky po doskoku -->
+    <div class="it3-grid-body" id="id-IT3-nearshoring" style="scroll-margin-top: 80px;"> <!-- aby menu nezakryvalo vrch stranky po doskoku -->
       <div class="it3-grid-line"></div>
       <div class="it3-heading-back-row">
         <h3>NEARSHORING</h3>
-        <a href="#IT2-nearshoring-back" style="color: #AAF;">back</a>
+        <a href="#id-IT2-nearshoring-back" style="color: #AAF;">back</a>
       </div>
       <h1 lang-code="02031">.Výhody IT Nearshoring</h1>
       <div class="it3-grid">
