--- a/Block_IT4.html
+++ b/Block_IT4.html
@@ -18,12 +18,12 @@
 </head>
 <body>
   <div id="IT4-div-src">  <!-- modrocierne pozadie -->
-    <div class="it4-grid-body" id="IT4-odbornost" style="scroll-margin-top: 80px;"> 
+    <div class="it4-grid-body" id="id-IT4-odbornost" style="scroll-margin-top: 80px;"> 
       <div class="it3-grid-line"></div>
       <!-- <h3 lang-code="02041">.ODBORNOSŤ</h3> -->
       <div class="it3-heading-back-row">
         <h3 lang-code="02041">.ODBORNOSŤ</h3>
-        <a href="#IT2-odbornost-back" style="color: #AAF;">back"</a>
+        <a href="#id-IT2-odbornost-back" style="color: #AAF;">back"</a>
       </div>
       <h1 lang-code="02042">.Naša odbornosť</h1>
       <div class="it3-grid">
