--- a/Block_IT5.html
+++ b/Block_IT5.html
@@ -16,12 +16,12 @@
 </head>
 <body>
   <div id="IT5-div-src">
-    <div class="it3-grid-body" id="IT5-it-riesenia" style="scroll-margin-top: 80px;">
+    <div class="it3-grid-body" id="id-IT5-it-riesenia" style="scroll-margin-top: 80px;">
       <div class="it3-grid-line"></div>
       <!-- <h3 lang-code="02051">.IT RIEŠENIA</h3> -->
       <div class="it3-heading-back-row">
         <h3 lang-code="02051">.IT RIEŠENIA</h3>
-        <a href="#IT2-it-riesenia-back" style="color: #AAF;">back"</a>
+        <a href="#id-IT2-it-riesenia-back" style="color: #AAF;">back"</a>
       </div>
 
       <h1 lang-code="02052">.IT riešenia na mieru</h1>
